# django-smart-media

./: CHANGELOG.rst  LICENCE.txt  MANIFEST.in  Makefile  README.rst  freezer.py  frozen.txt  setup.cfg  sphinx_reload.py
docs/: conf.py  development.rst  django_settings.py  history.rst  index.rst  install.rst  references.rst  requirements.txt  tutorials.rst
sandbox/: urls.py
sandbox/sample/: admin.py  apps.py  factories.py  forms.py  models.py  urls.py  views.py
sandbox/sample/migrations/: 0001_initial.py  0002_alter_imageitem_cover_alter_imageitem_image_and_more.py
sandbox/settings/: base.py
sandbox/templates/: skeleton.html
sandbox/templates/sample/: imageitem_detail.html  imageitem_form.html  index.html
sass/: boussole.json
sass/scss/: fileinputbutton.scss
sass/scss/tools/: _include-fileinputbutton.scss
smart_media/: __init__.py  admin.py  apps.py  exceptions.py  fields.py  mixins.py  modelfields.py  settings.py  signals.py  thumbnailing.py  validators.py  widgets.py
smart_media/contrib/: django_configuration.py
smart_media/management/commands/: purge_medias.py
smart_media/purge/: __init__.py
smart_media/static/smart_image/css/: fileinputbutton.css
smart_media/static/smart_image/js/: fileinputbutton.js
smart_media/templates/smart_image/: fileinputbutton_basic.html  fileinputbutton_clearable.html
smart_media/templatetags/: smart_image.py
smart_media/utils/: factories.py  file.py  tests.py
tests/: 0005_utils_file.py  0010_validators.py  0020_mixins.py  0030_thumbnailing.py  006_contrib_django_configuration.py  1000_sample_models.py  1010_sample_forms.py  1020_sample_admin.py  1030_sample_views.py  conftest.py
