;;
;; Django smart image package
;;
[metadata]
name = django-smart-media
version = 0.1.0
description = Django file fields with SVG support
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/django-smart-media
license = MIT
keywords = Python Django
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1

[options]
include_package_data = True
install_requires =
    Django>=3.1,<4.2
    pillow>=8.0.0
    sorl-thumbnail>=12.9.0
packages = find:
zip_safe = True

[options.extras_require]
dev =
    pytest
    pytest-django
    factory-boy
    pyquery
frontend =
    boussole
quality =
    flake8
    twine
    tox
doc =
    sphinx
    sphinx-rtd-theme
    livereload

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__
    */migrations/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -vv
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist = py{38,310}-django{32,40,41}

[testenv]

deps =
    django32: Django>=3.2,<3.3
    django40: Django>=4.0,<4.1
    django41: Django>=4.1,<4.2

commands =
    pip install -e .[dev]
    pytest -vv tests
