;;
;; Django smart image package
;;
[metadata]
name = django-smart-media
version = 0.4.0-pre.2
description = Django file fields with SVG support
long_description = file:README.rst
long_description_content_type = text/x-rst
author = David Thenon
author_email = sveetch@gmail.com
url = https://github.com/sveetch/django-smart-media
project_urls =
    Source Code = https://github.com/sveetch/django-smart-media
    Issue Tracker = https://github.com/sveetch/django-smart-media/issues
    Changelog = https://django-smart-media.readthedocs.io/en/latest/history.html
    Documentation = https://django-smart-media.readthedocs.io/
license = MIT
keywords = Python,Django,Image,Sorl
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Django
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 5.0

[options]
python_requires = >=3.9
include_package_data = True
install_requires =
    Django>=4.0
    pillow>=8.0.0
    sorl-thumbnail>=12.9.0
packages = find:
zip_safe = True

[options.extras_require]
dev =
    pytest
    pytest-django
    factory-boy
    pyquery
    freezegun
frontend =
    boussole
quality =
    flake8
    twine
    tox
doc =
    sphinx>=4.3.0
    sphinx-rtd-theme==1.1.0
    livereload

[options.packages.find]
where = .
exclude=
    data
    docs
    tests
    sandbox

[wheel]
universal = 0

;;
;; Third-party packages configuration
;;
[flake8]
max-line-length = 88
exclude =
    .git,
    .venv,
    build,
    __pycache__
    */migrations/*

[tool:pytest]
DJANGO_SETTINGS_MODULE = sandbox.settings.tests
addopts = -v --tb=long
python_files =
    *.py
testpaths =
    tests

[tox:tox]
minversion = 3.4.0
envlist = py{39,310}-django{40,42,50}

[testenv]

deps =
    django40: Django>=4.0,<4.1
    django42: Django>=4.2,<5.0
    django50: Django>=5.0,<5.1

commands =
    pip install -e .[dev]
    pytest -v --tb=long tests
